Remove dependency to sync

--- a/rebar.config
+++ b/rebar.config
@@ -18,8 +18,7 @@
   warn_untyped_record, debug_info
 ]}.
 {deps, [
-  {lager,  ".*",  {git, "git://github.com/basho/lager.git",  "master"}},
-  {sync,   ".*", {git, "git@github.com:rustyio/sync.git",    "master"}},
+  {lager, ".*", {git, "git://github.com/basho/lager.git",    "2.0.3"}},
   {gun,    ".*",  {git, "git@github.com:extend/gun.git",     "master"}}
 ]}.
 {xref_warnings, true}.
