--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,5 @@
 {lib_dirs,["deps"]}.
+
 {erl_opts, [
   {parse_transform, lager_transform},
   {src_dirs, ["src"]},
@@ -17,9 +18,11 @@
   %warn_missing_spec,
   warn_untyped_record, debug_info
 ]}.
+
 {deps, [
-  {lager, ".*", {git, "git://github.com/basho/lager.git",    "2.0.3"}},
-  {gun,    ".*",  {git, "git@github.com:extend/gun.git",     "master"}}
+    {lager, ".*", {git, "git://github.com/basho/lager.git", "2.1.0"}},
+    {gun, ".*", {git, "git://github.com/extend/gun.git", "master"}}
 ]}.
+
 {xref_warnings, true}.
 {xref_checks, [undefined_function_calls, undefined_functions, locals_not_used, deprecated_function_calls, deprecated_functions]}.
